fix minor spacing issue with footer

--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,8 @@ footer {
 	background-color: #C4C4C4;
 	padding-top: 5px;
 	padding-bottom: 15px;
-	margin-top: 15px;
+	/*margin-top: 15px;*/
+	margin-top: 0px;
 	margin-right: 0px;
 	margin-left: 0px;
 	padding-left: 15px;
